* 2014-05-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 31391: Register push certificate provider for Mac OS under the correct class  

* 2014-05-05 - lars.hoogestraat@open-xchange.com

 - Fix for bug 32250: Changed yahoo api access to https further added error message on receiving invalid response

* 2014-05-05 - thorben.betten@open-xchange.com

 - Fix for bug 32296: Do not use proxy authentication for external mail accounts

* 2014-05-05 - tobias.friedrich@open-xchange.com

 - Fix for bug 32292: Prevent USM-JSON* and USM-EAS* sessions from being put to distributed storage 

* 2014-05-04 - ioannis.chouklis@open-xchange.com

 - Fix for bug 30647: Display the maximum allowed size of an attachment in a human readable format. 

* 2014-05-04 - thorben.betten@open-xchange.com

 - Fix for bug 32265: Check for possible absent user participant prior to checking appointment's permissions

* 2014-05-03 - tobias.friedrich@open-xchange.com

 - Fix for bug 32288: Pass the correct mandatory contact fields

* 2014-05-02 - marcus.klein@open-xchange.com

 - Fix for bug 32044: Update the reminder's folderID for all accessing users, if there are no participants. Check additionally permissions
   on the destination folder for all reminder.

* 2014-05-02 - tobias.friedrich@open-xchange.com

 - Fix for bug 32259: Exclude folders with files storage type TRASH_FOLDER
 - Fix for bug 32267: Translate subscription display name when serializing subscription sources
 - Fix for bug 32260: Reworked search term construction for file type facet

* 2014-04-30 - tobias.friedrich@open-xchange.com

 - Fix for bug 29904: Throw "FILE_STORAGE-0017" in case of empty or missing "folder" parameter

* 2014-04-30 - martin.schneider@open-xchange.com

 - Fix for bug 32036: Use 'transport_auth' for setting SMTP credentials usage. 

* 2014-04-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 32221: Supply reference to old parent folder ID in folder update event