@@ -78,6 +78,7 @@ import com.openexchange.groupware.userconfiguration.UserPermissionBitsStorage;
 import com.openexchange.server.impl.EffectivePermission;
 import com.openexchange.server.impl.OCLPermission;
 import com.openexchange.tools.iterator.SearchIterator;
+import com.openexchange.tools.iterator.SearchIterators;
 import com.openexchange.tools.oxfolder.OXFolderIteratorSQL;
 import com.openexchange.tools.oxfolder.OXFolderManager;
 import com.openexchange.tools.session.ServerSession;
@@ -628,6 +629,7 @@ public class FolderCollection extends AbstractCollection implements OXWebdavReso
 			return;
 		}
 		loadedChildren = true;
+		SearchIterator<FolderObject> iter = null;
 		try {
 			if(folder==null) {
 				loadFolder();
@@ -637,23 +639,20 @@ public class FolderCollection extends AbstractCollection implements OXWebdavReso
 			final UserPermissionBits userPermissionBits = UserPermissionBitsStorage.getInstance().getUserPermissionBits(session.getUserId(), session.getContext());
 			final Context ctx = session.getContext();
 
-			final SearchIterator<FolderObject> iter = OXFolderIteratorSQL.getVisibleSubfoldersIterator(id, user.getId(),user.getGroups(), ctx, userPermissionBits, new Timestamp(0));
-			//final SearchIterator iter = OXFolderTools.getVisibleSubfoldersIterator(id, user.getId(),user.getGroups(), ctx, userConfig, new Timestamp(0));
-
-
-			while(iter.hasNext()) {
+			iter = OXFolderIteratorSQL.getVisibleSubfoldersIterator(id, user.getId(),user.getGroups(), ctx, userPermissionBits, new Timestamp(0));
+			while (iter.hasNext()) {
+                final FolderObject folder = iter.next();
                 if (FolderObject.TRASH == folder.getType()) {
                     continue; // skip trash folder
                 }
-				final FolderObject folder = iter.next();
 				final WebdavPath newUrl = getUrl().dup().append(getFolderName(folder));
                 children.add(new FolderCollection(newUrl, factory, folder));
 			}
-
-			//children.addAll(factory.getCollections(folder.getSubfolderIds(true, getSession().getContext())));
 			children.addAll(factory.getResourcesInFolder(this, folder.getObjectID()));
 		} catch (final Exception e) {
 		    throw WebdavProtocolException.generalError(e, url, HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
+		} finally {
+		    SearchIterators.close(iter);
 		}
 		// Duplicates?
 	}
